--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "ethereum-waffle": "^4.0.0-alpha.0",
     "ethers": "^5.6.0",
     "hardhat": "^2.9.1"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.5.0"
   }
 }
